[package]
name = "protohackers"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6.3"
primal = "0.3.2"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
